# game-stream-server

./: .gitignore  .gitmodules  CMakeLists.txt  Encoder.cpp  Encoder.h  Grabber.cpp  Grabber.h  README.md  Sink.h  Source.h  exception.h  main.cpp  source.cpp  spinlock.h
audio/: AlsaGrabber.cpp  AlsaGrabber.h  OpusEncoder.cpp  OpusEncoder.h
input/: virtual_gamepad.cpp  virtual_gamepad.h  virtual_keyboard.cpp  virtual_keyboard.h  virtual_mouse.cpp  virtual_mouse.h
network/: RTPAudioSender.cpp  RTPAudioSender.h  RTPVideoSender.cpp  RTPVideoSender.h  remote_session.cpp  remote_session.h  socket_server.cpp  socket_server.h
video/: FrameConverter.cpp  FrameConverter.h  H264Encoder.cpp  H264Encoder.h  X11Grabber.cpp  X11Grabber.h
